--- a/source/_layouts/default.html
+++ b/source/_layouts/default.html
@@ -12,7 +12,7 @@ MathJax.Hub.Config({
   "HTML-CSS": { preferredFont: "TeX", availableFonts: ["STIX","TeX"] }
 });
 </script>
-<script src="http://cdn.mathjax.org/mathjax/latest/MathJax.js" type="text/javascript"></script>
+<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js" type="text/javascript"></script>
 
 {% capture root_url %}{{ site.root | strip_slash }}{% endcapture %}
 {% include head.html %}
