--- a/source/_includes/custom/head.html
+++ b/source/_includes/custom/head.html
@@ -6,8 +6,8 @@
 MathJax.Hub.Config({
   jax: ["input/TeX", "output/HTML-CSS"],
   tex2jax: {
-    inlineMath: [ ['$', '$'] ['\(', '\)'] ],
-    displayMath: [ ['$$', '$$']],
+    inlineMath: [ ['$', '$'] ],
+    displayMath: [ ['$$', '$$'] ],
     processEscapes: true,
     skipTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code']
   },
@@ -15,4 +15,4 @@ MathJax.Hub.Config({
   "HTML-CSS": { preferredFont: "TeX", availableFonts: ["STIX","TeX"] }
 });
 </script>
-<script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js" type="text/javascript"></script>
+<script src="//cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
