--- a/sass/custom/_fonts.scss
+++ b/sass/custom/_fonts.scss
@@ -4,7 +4,7 @@
 
 //$sans: "Roboto", "Open Sans", Arial, sans-serif;
 //$serif: "PT Serif", Georgia, Times, "Times New Roman", serif;
-//$mono: Menlo, Monaco, "Andale Mono", "lucida console", "Courier New", monospace;
+//$mono: Monaco, "Andale Mono", "lucida console", "Courier New", monospace;
 //$heading-font-family: "Fjalla One", "Georgia", "Helvetica Neue", Arial, sans-serif;
 //$header-title-font-family: "Roboto", sans-serif;
 //$header-subtitle-font-family: "Roboto", sans-serif;
