--- a/sass/custom/_layout.scss
+++ b/sass/custom/_layout.scss
@@ -5,17 +5,17 @@
 //$header-padding-top: 1.5em;
 //$header-padding-bottom: 1.5em;
 
-//$max-width: 1350px;
-//$indented-lists: true;
+$max-width: 1000px;
+$indented-lists: true;
 
 // Padding used for layout margins
 //$pad-min: 18px;
 //$pad-narrow: 25px;
 //$pad-medium: 35px;
-//$pad-wide: 55px;
+$pad-wide: 35px;
 
 // Sidebar widths used in media queries
 //$sidebar-width-medium: 240px;
 //$sidebar-pad-medium: 15px;
 //$sidebar-pad-wide: 20px;
-//$sidebar-width-wide: 300px;
+$sidebar-width-wide: 260px;
