--- a/sass/custom/_fonts.scss
+++ b/sass/custom/_fonts.scss
@@ -6,5 +6,5 @@ $sans: "Roboto", "Open Sans", Arial, sans-serif;
 $serif: "PT Serif", Georgia, Times, "Times New Roman", serif;
 $mono: Monaco, "Andale Mono", "lucida console", "Courier New", monospace;
 $heading-font-family: "Fjalla One", "Georgia", "Helvetica Neue", Arial, sans-serif;
-$header-title-font-family: "Roboto", sans-serif;
+$header-title-font-family: "Rock Salt", sans-serif;
 $header-subtitle-font-family: "Roboto", sans-serif;
